[metadata]

name = dataset_anonymization
version = 0.1
description = Light set of tools for consistent dataset anonymization
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
          Development Status :: 1 - Planning
          License :: OSI Approved :: MIT License
          Programming Language :: Python :: 3
url = https://github.com/zach-blumenfeld/dataset_anonymization
author = Zach Blumenfeld
author_email = 'zblumenf@gmail.com'
license = 'MIT'

[options]
packages = find:
test_suite=tests
include_package_data = True
python_requires = >=3.7